[tool.poetry]
name = "repl-nix-the-complete-python-pro-1"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_the_complete_python_pro_1"}]

[tool.poetry.dependencies]
python = "^3.12"
selenium = "^4.22.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
